# persistring

./: .gitignore  Cargo.toml  README-ru.md  README.md
src/: cow.rs  delta.rs  lib.rs  long_buffer.rs  rope.rs  tests.rs
src/util/: mod.rs  string_segment.rs
