[package]
name = "persistring"
version = "0.1.0"
authors = ["Petr Portnov <me@progrm-jarvis.ru>"]
edition = "2021"

description = "Persistent String which provides undo and redo operations"

repository = "https://github.com/JarvisCraft/persistring"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
